import { renderWithReduxAndRouter } from "../helpers/RenderWithReduxAndRouter";
import CategoriesList from "../../components/Reusable-Components/CategoriesList";
import { screen } from "@testing-library/react";
import WebSiteDescription from "../../components/Reusable-Components/WebSiteDescription";
import CategoriesProductsListItem from "../../components/Reusable-Components/CategoriesProductsListItem";
import Picture from "../../components/Reusable-Components/Picture";
import {
  categoriesProductListItemTestProps,
  pictureComponentTestProps,
} from "./components-props";

describe("reusable-components-render-tests", () => {
  test("categories-list-component-should-renders-correctly", () => {
    renderWithReduxAndRouter(<CategoriesList isMobile={false} />);
    const categoriesList: HTMLUListElement =
      screen.getByTestId("categories-list");
    expect(categoriesList).toMatchSnapshot();
  });
  test("web-site-description-component-should-renders-correctly", () => {
    renderWithReduxAndRouter(<WebSiteDescription />);
    const webSiteDescription: HTMLDivElement = screen.getByTestId(
      "web-site-description"
    );
    expect(webSiteDescription).toMatchSnapshot();
  });
  test("categories-product-list-item-component-should-renders-correctly", () => {
    const {
      previewImage,
      isNew,
      name,
      description,
      isEven,
      id,
    }: {
      previewImage: { mobile: string; tablet: string; desktop: string };
      isNew: boolean;
      name: string;
      description: string;
      isEven: boolean;
      id: string;
    } = categoriesProductListItemTestProps;
    renderWithReduxAndRouter(
      <CategoriesProductsListItem
        previewImage={previewImage}
        isNew={isNew}
        name={name}
        description={description}
        isEven={isEven}
        id={id}
      />
    );
    const categoriesListItem: HTMLLIElement = screen.getByTestId(
      "categories-products-list-item"
    );
    expect(categoriesListItem).toMatchSnapshot();
  });
  test("picture-component-should-renders-correctly", () => {
    const { imageSrc, sizes, name, className } = pictureComponentTestProps;
    renderWithReduxAndRouter(
      <Picture
        imageSrc={imageSrc}
        sizes={sizes}
        name={name}
        className={className}
      />
    );
    const pictureComponent = screen.getByTestId("picture-component");
    expect(pictureComponent).toMatchSnapshot();
  });
});
